--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,8 @@
         "zfcampus/zf-development-mode": "^3.0",
         "zendframework/zend-db": "^2.8.1",
         "zendframework/zend-mvc-form": "^1.0",
-        "zendframework/zend-navigation": "^2.8"
+        "zendframework/zend-navigation": "^2.8",
+        "zendframework/zend-paginator": "^2.7"
     },
     "autoload": {
         "psr-4": {
