--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "zendframework/zend-db": "^2.8.1",
         "zendframework/zend-mvc-form": "^1.0",
         "zendframework/zend-navigation": "^2.8",
-        "zendframework/zend-paginator": "^2.7"
+        "zendframework/zend-paginator": "^2.7",
+        "zendframework/zend-debug": "^2.5"
     },
     "autoload": {
         "psr-4": {
